Added getLocationBoundingBox to SensorNode

--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/commons-logging-api-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/gekmllib.jar"/>
 	<classpathentry kind="lib" path="lib/swingx-core-1.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/geohash-java.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
