--- a/.classpath
+++ b/.classpath
@@ -15,6 +15,10 @@
 	<classpathentry kind="lib" path="lib/jfreechart-1.0.13/lib/jcommon-1.0.16.jar"/>
 	<classpathentry kind="lib" path="lib/geohash-java.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart-1.0.13/lib/jfreechart-1.0.13.jar"/>
-	<classpathentry kind="lib" path="lib/jts-1.11/lib/jts-1.11.jar"/>
+	<classpathentry kind="lib" path="lib/jts-1.11/lib/jts-1.11.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/hamiltont/Documents/Programming/eclipse-workspace/Empower/lib/jts-1.11/doc/javadoc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
